<resources>
    <string name="app_name">Jalan-Jalan</string>
    <string name="slogan">Wisata Jadi Lebih Asyik!</string>
    <string name="signin">SIGN IN</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="create_new_label">Create New Account</string>
    <string name="email_label">Email Address</string>
    <string name="continue_label">Continue</string>
    <string name="selfi_label">Selfie Time</string>
    <string name="name_label">Name</string>
    <string name="bio_label">Your Passion ?</string>
    <string name="explore_label">EXPLORE NOW</string>
    <string name="todo">todo</string>
    <string name="awesome_label">You Awesome</string>
    <string name="welcome_label">Welcome to TiketSaya \nand enjoy your tour</string>
    <string name="discover_label">Discover \nThe Beauty \nOf Earth</string>
    <string name="new_account_label">New Account</string>
    <string name="fill_label">Please fill up the forms below \nfor informations</string>
    <string name="selfie_message_label">Let the world know yourself \nmore better and ever</string>
    <string name="plus_label">+</string>
    <string name="dashboard_label">My Dashboard</string>
    <string name="name_view_label">Sigit Surya Kusuma</string>
    <string name="traveler_label">Traveller</string>
    <string name="balance_label">$ 120</string>
    <string name="main_menu_label">Main Menu</string>
    <string name="explore_beauty_label">Explore the beauty of world</string>
    <string name="pisa_label">Pisa</string>
    <string name="torri_label">Torri</string>
    <string name="pagoda_label">Pagoda</string>
    <string name="candi_label">Borobudur</string>
    <string name="sphinx_label">Sphinx</string>
    <string name="monas_label">Monas</string>
    <string name="ticket_label">TicketTips</string>
    <string name="learn_label">Learn it for many benefits</string>
    <string name="buy_label">Buy Ticket</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="subtitle_edit_profile">We highly suggest you to \n use the correct informations</string>
    <string name="save_profile">SAVE PROFILE</string>
    <string name="pantai">Pantai</string>
    <string name="bns">BNS</string>
    <string name="coban">Coban</string>
    <string name="paralayang">Paralayang</string>
    <string name="dino_park">Dino Park</string>
    <string name="museum">Museum</string>
    <string name="my_ticket">My Ticket</string>
    <string name="subtitle_myticket">Explore the beauty of World</string>
    <string name="sign_out">Sign Out</string>
    <string name="ticket_details">Ticket Details</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="subtitle_splash">Becomes More Fun \nWith JalanJalan</string>
    <string name="view_ticket">View Ticket</string>
    <string name="my_dashboard">my dashboard</string>
    <string name="buy_ticket">Buy Ticket</string>
    <string name="subtitle_buy_ticket">Check the amount of tickets</string>
    <string name="pricing">Pricing</string>
    <string name="current_balance">You current balance is</string>
    <string name="total_price">Total Price</string>
    <string name="pay_now">PAY NOW</string>
    <string name="subtitle_ticket_detail">Knowing before travel</string>
    <string name="information">Information</string>
    <string name="tripod_fas">Tripod Everywhere</string>
    <string name="subtitle_content">Connect for any tourist</string>
    <string name="dance_and_foods">Dance and Foods</string>
</resources>
