<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GetStartedAct">

    <View
        android:background="@drawable/appbg_getstarted"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:background="@drawable/bg_overlay_getstarted"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/emblem_app"
        android:layout_width="68dp"
        android:layout_height="45dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="116dp"
        android:src="@drawable/emblemwhite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/emblem_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/mregular"
        android:lineSpacingExtra="9dp"
        android:text="@string/discover_label"
        android:textColor="#fff"
        android:textSize="46sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_sign_in"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emblem_app" />

    <Button
        android:id="@+id/btn_sign_in"
        style="@style/btn_blue_primary"
        android:layout_marginStart="48dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="48dp"
        android:text="@string/signin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emblem_text" />

    <Button
        android:id="@+id/btn_new_account_create"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="48dp"
        android:background="@drawable/bg_btn_white_primary"
        android:fontFamily="@font/mmedium"
        android:text="@string/new_account_label"
        android:textColor="#B9B9B9"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_sign_in" />

</androidx.constraintlayout.widget.ConstraintLayout>