<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient_primary_blue"
    tools:context=".SignInAct">

    <ImageView
        android:id="@+id/imageview"
        android:layout_width="192dp"
        android:layout_height="110dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/applogowhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/todo" />

    <LinearLayout
        android:background="@drawable/bg_btn_white_primary"
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="44dp"
        android:orientation="vertical"
        android:paddingTop="30dp"
        android:paddingBottom="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageview">

        <LinearLayout
                android:layout_marginBottom="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:fontFamily="@font/mlight"
                    android:textSize="20sp"
                    android:textColor="@color/grayprimary"
                    android:text="@string/username_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <EditText
                    android:fontFamily="@font/mmedium"
                    android:textColor="@color/blackprimary"
                    android:paddingLeft="12dp"
                    android:lines="1"
                    android:background="@drawable/bg_input_edit"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginBottom="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:fontFamily="@font/mlight"
                android:textSize="20sp"
                android:textColor="@color/grayprimary"
                android:text="@string/password_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:inputType="textPassword"
                android:fontFamily="@font/mmedium"
                android:textColor="@color/blackprimary"
                android:paddingLeft="12dp"
                android:lines="1"
                android:background="@drawable/bg_input_edit"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:autofillHints="" />
        </LinearLayout>

        <Button
            android:layout_marginTop="10dp"
            android:id="@+id/button_sign_in"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:background="@drawable/bg_btn_blue_primary"
            android:fontFamily="@font/mmedium"
            android:text="@string/signin"
            android:textColor="#FFF"
            android:textSize="22sp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/btn_new_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/mlight"
        android:text="@string/create_new_label"
        android:textColor="#fff"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>