<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgprimary"
    tools:context=".RegisterOneAct">

    <ScrollView
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="310dp"
                android:background="@drawable/bg_gradient_primary_blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:fontFamily="@font/mregular"
                android:text="@string/dashboard_label"
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/view" />

            <View
                android:id="@+id/view2"
                android:layout_width="59dp"
                android:layout_height="59dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_view_circle_picture"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />
            <com.github.florent37.shapeofview.shapes.CircleView
                android:id="@+id/btn_to_profile"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="29dp"
                android:layout_marginTop="25dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView">
                <ImageView
                    android:id="@+id/photo_home_user"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/icon_nopic"></ImageView>
            </com.github.florent37.shapeofview.shapes.CircleView>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="28dp"
                android:fontFamily="@font/mmedium"
                android:text="@string/name_view_label"
                android:textColor="#fff"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@+id/view2"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/mlight"
                android:text="@string/traveler_label"
                android:textColor="#fff"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/view2"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="24dp"
                android:fontFamily="@font/mmedium"
                android:text="@string/balance_label"
                android:textColor="@color/greenprimary"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="112dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/bg_btn_white_primary"
                android:orientation="vertical"
                android:paddingLeft="24dp"
                android:paddingTop="30dp"
                android:paddingRight="24dp"
                android:paddingBottom="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/mregular"
                    android:text="@string/main_menu_label"
                    android:textColor="@color/blackprimary"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/mlight"
                    android:text="@string/explore_beauty_label"
                    android:textColor="@color/grayprimary"
                    android:textSize="16sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:background="@color/linecolor" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <LinearLayout
                        android:id="@+id/btn_ticket_pisa"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:contentDescription="@string/todo"
                            android:src="@drawable/icon_pisa" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:fontFamily="@font/mregular"
                            android:text="@string/pisa_label"
                            android:textColor="@color/blackprimary"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/btn_ticket_torri"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:contentDescription="@string/todo"
                            android:src="@drawable/icon_torri" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:fontFamily="@font/mregular"
                            android:text="@string/torri_label"
                            android:textColor="@color/blackprimary"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/btn_ticket_candi"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:contentDescription="@string/todo"
                            android:src="@drawable/icon_borobudur" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:fontFamily="@font/mregular"
                            android:text="@string/candi_label"
                            android:textColor="@color/blackprimary"
                            android:textSize="16sp" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <LinearLayout
                        android:id="@+id/btn_ticket_pagoda"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:contentDescription="@string/todo"
                            android:src="@drawable/icon_pagoda" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:fontFamily="@font/mregular"
                            android:text="@string/pagoda_label"
                            android:textColor="@color/blackprimary"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/btn_ticket_monas"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:contentDescription="@string/todo"
                            android:src="@drawable/icon_monas" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:fontFamily="@font/mregular"
                            android:text="@string/monas_label"
                            android:textColor="@color/blackprimary"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/btn_ticket_sphinx"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:contentDescription="@string/todo"
                            android:src="@drawable/icon_sphinx" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:fontFamily="@font/mregular"
                            android:text="@string/sphinx_label"
                            android:textColor="@color/blackprimary"
                            android:textSize="16sp" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/mregular"
                android:text="@string/ticket_label"
                android:textColor="@color/blackprimary"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/mlight"
                android:text="@string/learn_label"
                android:textColor="@color/grayprimary"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <HorizontalScrollView
                android:scrollbars="none"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_marginRight="24dp"
                        android:src="@drawable/item_one"
                        android:layout_width="227dp"
                        android:layout_height="98dp"/>

                    <ImageView
                        android:layout_marginRight="24dp"
                        android:src="@drawable/item_one"
                        android:layout_width="227dp"
                        android:layout_height="98dp"/>

                    <ImageView
                        android:layout_marginRight="24dp"
                        android:src="@drawable/item_one"
                        android:layout_width="227dp"
                        android:layout_height="98dp"/>

                    <ImageView
                        android:layout_marginRight="24dp"
                        android:src="@drawable/item_one"
                        android:layout_width="227dp"
                        android:layout_height="98dp"/>
                </LinearLayout>

            </HorizontalScrollView>



        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>